Copied the new shell scripts from bin/ and adjusted them for the installer.
svn path=/trunk/eXist/; revision=6261