@@ -1,10 +1,15 @@
 #!/bin/bash
 # -----------------------------------------------------------------------------
+# client.sh - Start Script for eXist interactive client
 #
-# Shell script to start up the eXist command line client.
-#
-# $Id: startup.sh,v 1.6 2002/12/28 17:37:22 wolfgang_m Exp $
+# $Id$
 # -----------------------------------------------------------------------------
+
+#
+# In addition to the other parameter options for the interactive client 
+# pass -j or --jmx to enable JMX agent.  The port for it can be specified 
+# with optional port number e.g. -j1099 or --jmx=1099.
+#
 
 # will be set by the installer
 if [ -z "$EXIST_HOME" ]; then
@@ -15,48 +20,31 @@ if [ -z "$JAVA_HOME" ]; then
     JAVA_HOME="%{JAVA_HOME}"
 fi
 
-JAVA_CMD="$JAVA_HOME/bin/java"
+SCRIPTPATH=$(dirname `/bin/pwd`/$0)
+# source common functions and settings
+. ${SCRIPTPATH}/functions.d/eXist-settings.sh
+. ${SCRIPTPATH}/functions.d/jmx-settings.sh
+. ${SCRIPTPATH}/functions.d/getopt-settings.sh
 
-OPTIONS=
+get_opts "$*" "${CLIENT_OPTS}";
 
-if [ ! -f "$EXIST_HOME/start.jar" ]; then
-	echo "Unable to find start.jar. Please set EXIST_HOME to point to your installation directory."
-	exit 1
-fi
+check_exist_home $0;
 
-OPTIONS="-Dexist.home=$EXIST_HOME"
-
-if [ -n "$JETTY_HOME" ]; then
-	OPTIONS="-Djetty.home=$JETTY_HOME $OPTIONS"
-fi
-
-# save LANG
-if [ -n "$LANG" ]; then
-	OLD_LANG="$LANG"
-fi
-# set LANG to UTF-8
-LANG=en_US.UTF-8
+set_exist_options;
 
 # set java options
-if [ -z "$JAVA_OPTIONS" ]; then
-	JAVA_OPTIONS="-Xms16000k -Xmx256000k -Dfile.encoding=UTF-8"
-fi
+set_client_java_options;
+
+# enable the JMX agent? If so, concat to $JAVA_OPTIONS:
+check_jmx_status;
+
+# save LANG
+set_locale_lang;
 
 # save LD_LIBRARY_PATH
-if [ -n "$LD_LIBRARY_PATH" ]; then
-	OLD_LIBRARY_PATH="$LD_LIBRARY_PATH"
-fi
-# add lib/core to LD_LIBRARY_PATH for readline support
-LD_LIBRARY_PATH="$LD_LIBRARY_PATH:$EXIST_HOME/lib/core"
-JAVA_ENDORSED_DIRS="$EXIST_HOME"/lib/endorsed
+set_library_path;
 
-$JAVA_CMD $JAVA_OPTIONS $OPTIONS \
-    -Djava.endorsed.dirs=$JAVA_ENDORSED_DIRS \
-    -jar "$EXIST_HOME/start.jar" client $*
+${JAVA_HOME}/bin/java ${JAVA_OPTIONS} ${OPTIONS} ${DEBUG_OPTS} -jar "$EXIST_HOME/start.jar" client ${JAVA_OPTS[@]}
 
-if [ -n "$OLD_LIBRARY_PATH" ]; then
-	LD_LIBRARY_PATH="$OLD_LIBRARY_PATH"
-fi
-if [ -n "$OLD_LANG" ]; then
-	LANG="$OLD_LANG"
-fi
+restore_library_path;
+restore_locale_lang;
